FEAT: Implementation of middleware to validate the authentication token
